feat: add ondemand governor

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -6,6 +6,7 @@ all: $(DOCKER_FILE)
 	docker build -f $(DOCKER_FILE) -t $(DOCKER_IMAGE) ../
 	
 run:
-	docker run --privileged --rm -it -v "${HOME}:${HOME}" --user $(shell id -u):$(shell id -g) -w "${PWD}" $(DOCKER_IMAGE)
+	# docker run --privileged --rm -it -v "${HOME}:${HOME}" --user $(shell id -u):$(shell id -g) -w "${PWD}" $(DOCKER_IMAGE)
+	docker run --privileged --rm -it -v "${HOME}:${HOME}" -w "${PWD}" $(DOCKER_IMAGE)
 
 .PHONY: all
