feat: add coldestcore policy

--- a/config/base.cfg
+++ b/config/base.cfg
@@ -332,6 +332,7 @@ type = open
 
 [scheduler/open]
 logic = first_unused #Set the scheduling algorithm used. Currently supported: first_unused.
+logic = coldestCore
 epoch = 10000000	#Set the scheduling epoch in ns; granularity at which open scheduler is called.
 queuePolicy = FIFO	#Set the queuing policy. Currently support: FIFO, priority.
 distribution = poisson #Set the arrival distribution of open workload. Currently supported: uniform, poisson, explicit
@@ -348,7 +349,11 @@ hb_enabled = false # default value, overridden by line below when 'base_configur
 
 [scheduler/open/migration]
 logic = off  # set the migration algorithm used. Possible algorithms: off (no migration)
+logic = coldestCore
 epoch = 1000000
+
+[scheduler/open/migration/coldestCore]
+criticalTemperature = 80
 
 [scheduler/open/dvfs]
 logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
