--- a/config/base.cfg
+++ b/config/base.cfg
@@ -1,3 +1,4 @@
+
 # Configuration file for the Sniper simulator
 
 # This file is organized into sections defined in [] brackets as in [section].
@@ -352,20 +353,22 @@ epoch = 1000000
 
 [scheduler/open/dvfs]
 logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
-logic = maxFreq  # cfg:maxFreq
+#logic = maxFreq  # cfg:maxFreq
 #logic = testStaticPower  # cfg:testStaticPower
 min_frequency = 1.0
 max_frequency = 4.0
 #max_frequency = 1.0  # cfg:1.0GHz
-max_frequency = 2.0  # cfg:2.0GHz
+#max_frequency = 2.0  # cfg:2.0GHz
 #max_frequency = 3.0  # cfg:3.0GHz
-#max_frequency = 4.0  # cfg:4.0GHz
+max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
 dvfs_epoch = 1000000 # cfg:slowDVFS
 #dvfs_epoch = 250000  # cfg:mediumDVFS
 #dvfs_epoch = 100000  # cfg:fastDVFS
 reserved_cores_are_active = false
+#logic = ondemand # cfg:ondemand
+logic = fixedFreq # cfg:fixedFreq
 
 [scheduler/open/dvfs/fixed_power]
 per_core_power_budget = 1  # in Watt
@@ -424,3 +427,15 @@ enabled = false
 reliability_executable = reliability/reliability_external
 sum_file = sums.txt
 acceleration_factor = 21600000000  # accel. delta_t from 1 ms -> 250 days
+
+[scheduler/open/dvfs/ondemand]
+up_threshold = 0.3
+down_threshold = 0.2
+dtm_cricital_temperature = 80
+dtm_recovered_temperature = 75
+
+[scheduler/open/dvfs/fixedFreq]
+freqCore0 = 4 #in GHz
+freqCore1 = 4 #in GHz
+freqCore2 = 4 #in GHz
+freqCore3 = 3 #in GHz
