feat(staticMigration): Add cyclic core swapping policy

--- a/config/base.cfg
+++ b/config/base.cfg
@@ -349,11 +349,18 @@ hb_enabled = false # default value, overridden by line below when 'base_configur
 
 [scheduler/open/migration]
 logic = off  # set the migration algorithm used. Possible algorithms: off (no migration)
-epoch = 1000000
+logic = fixedPairSwap # cfg:fixedPairSwap
+epoch = 1000000 # default epoch 
+epoch = 2000000 # cfg: fastMigration
+epoch = 3000000 # cfg: slowMigration
+epoch = 4000000 # cfg: superSlowMigration
+
+[scheduler/open/migration/fixedPairSwap]
+threads = 4
 
 [scheduler/open/dvfs]
 logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
-#logic = maxFreq  # cfg:maxFreq
+logic = maxFreq  # cfg:maxFreq
 #logic = testStaticPower  # cfg:testStaticPower
 min_frequency = 1.0
 max_frequency = 4.0
@@ -368,7 +375,7 @@ dvfs_epoch = 1000000 # cfg:slowDVFS
 #dvfs_epoch = 100000  # cfg:fastDVFS
 reserved_cores_are_active = false
 #logic = ondemand # cfg:ondemand
-logic = fixedFreq # cfg:fixedFreq
+#logic = fixedFreq # cfg:fixedFreq
 
 [scheduler/open/dvfs/fixed_power]
 per_core_power_budget = 1  # in Watt
