feat(staticMigration): Add more configuration options in run.py

--- a/config/base.cfg
+++ b/config/base.cfg
@@ -349,7 +349,7 @@ hb_enabled = false # default value, overridden by line below when 'base_configur
 
 [scheduler/open/migration]
 logic = off  # set the migration algorithm used. Possible algorithms: off (no migration)
-logic = fixedPairSwap # cfg:fixedPairSwap
+#logic = fixedPairSwap # cfg:fixedPairSwap
 epoch = 1000000 # default epoch 
 epoch = 2000000 # cfg: fastMigration
 epoch = 3000000 # cfg: slowMigration
@@ -365,9 +365,9 @@ logic = maxFreq  # cfg:maxFreq
 min_frequency = 1.0
 max_frequency = 4.0
 #max_frequency = 1.0  # cfg:1.0GHz
-#max_frequency = 2.0  # cfg:2.0GHz
+max_frequency = 2.0  # cfg:2.0GHz
 #max_frequency = 3.0  # cfg:3.0GHz
-max_frequency = 4.0  # cfg:4.0GHz
+#max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
 dvfs_epoch = 1000000 # cfg:slowDVFS
@@ -442,7 +442,26 @@ dtm_cricital_temperature = 80
 dtm_recovered_temperature = 75
 
 [scheduler/open/dvfs/fixedFreq]
-freqCore0 = 4 #in GHz
-freqCore1 = 4 #in GHz
-freqCore2 = 4 #in GHz
-freqCore3 = 3 #in GHz
+# Baseline
+freqCore0 = 3 # cfg:baselineDVFS
+freqCore1 = 3 # cfg:baselineDVFS
+freqCore2 = 3 # cfg:baselineDVFS
+freqCore3 = 3 # cfg:baselineDVFS
+
+# Core 3 as the bottleneck
+freqCore0 = 3 # cfg:bottleneck
+freqCore1 = 3 # cfg:bottleneck
+freqCore2 = 3 # cfg:bottleneck
+freqCore3 = 2 # cfg:bottleneck
+
+# This configuration tests the impact when the master thread has more overhead compared to other cores.
+freqCore0 = 4 # cfg:BottleneckMaster
+freqCore1 = 3 # cfg:BottleneckMaster
+freqCore2 = 3 # cfg:BottleneckMaster
+freqCore3 = 3 # cfg:BottleneckMaster
+
+# Underutilization of the master thread maybe used to save power.
+freqCore0 = 2 # cfg:PowerSaveMaster
+freqCore1 = 3 # cfg:PowerSaveMaster
+freqCore2 = 3 # cfg:PowerSaveMaster
+freqCore3 = 3 # cfg:PowerSaveMaster
