bugfix(freq): Fixed a bug where frequencies could not be set to decimal values (e.g., x.5).

--- a/config/base.cfg
+++ b/config/base.cfg
@@ -365,8 +365,11 @@ logic = maxFreq  # cfg:maxFreq
 min_frequency = 1.0
 max_frequency = 4.0
 #max_frequency = 1.0  # cfg:1.0GHz
-max_frequency = 2.0  # cfg:2.0GHz
-#max_frequency = 3.0  # cfg:3.0GHz
+#max_frequency = 1.5  # cfg:1.5GHz
+#max_frequency = 2.0  # cfg:2.0GHz
+#max_frequency = 2.5  # cfg:2.5GHz
+max_frequency = 3.0  # cfg:3.0GHz
+max_frequency = 3.5  # cfg:3.5GHz
 #max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
@@ -443,25 +446,25 @@ dtm_recovered_temperature = 75
 
 [scheduler/open/dvfs/fixedFreq]
 # Baseline
-freqCore0 = 3 # cfg:baselineDVFS
-freqCore1 = 3 # cfg:baselineDVFS
-freqCore2 = 3 # cfg:baselineDVFS
-freqCore3 = 3 # cfg:baselineDVFS
+#freqCore0 = 3 # cfg:baseline
+#freqCore1 = 3 # cfg:baseline
+#freqCore2 = 3 # cfg:baseline
+#freqCore3 = 3 # cfg:baseline
 
 # Core 3 as the bottleneck
-freqCore0 = 3 # cfg:bottleneck
-freqCore1 = 3 # cfg:bottleneck
-freqCore2 = 3 # cfg:bottleneck
-freqCore3 = 2 # cfg:bottleneck
+#freqCore0 = 3 # cfg:bottleneck
+#freqCore1 = 3 # cfg:bottleneck
+#freqCore2 = 3 # cfg:bottleneck
+#freqCore3 = 2 # cfg:bottleneck
 
 # This configuration tests the impact when the master thread has more overhead compared to other cores.
-freqCore0 = 4 # cfg:BottleneckMaster
-freqCore1 = 3 # cfg:BottleneckMaster
-freqCore2 = 3 # cfg:BottleneckMaster
-freqCore3 = 3 # cfg:BottleneckMaster
+#freqCore0 = 4 # cfg:bottleneckMaster
+#freqCore1 = 3 # cfg:bottleneckMaster
+#freqCore2 = 3 # cfg:bottleneckMaster
+#freqCore3 = 3 # cfg:bottleneckMaster
 
 # Underutilization of the master thread maybe used to save power.
-freqCore0 = 2 # cfg:PowerSaveMaster
-freqCore1 = 3 # cfg:PowerSaveMaster
-freqCore2 = 3 # cfg:PowerSaveMaster
-freqCore3 = 3 # cfg:PowerSaveMaster
+#freqCore0 = 2 # cfg:powerSaveMaster
+#freqCore1 = 3 # cfg:powerSaveMaster
+#freqCore2 = 3 # cfg:powerSaveMaster
+#freqCore3 = 3 # cfg:powerSaveMaster
