bugsfix(base.cfg): Fix staticMigration configuration bug.
Co-authored-by: MCPS course <mcps2429@fs2.cm.cluster>

--- a/config/base.cfg
+++ b/config/base.cfg
@@ -349,11 +349,12 @@ hb_enabled = false # default value, overridden by line below when 'base_configur
 
 [scheduler/open/migration]
 logic = off  # set the migration algorithm used. Possible algorithms: off (no migration)
-#logic = fixedPairSwap # cfg:fixedPairSwap
+logic = fixedPairSwap # cfg:fixedPairSwap
 epoch = 1000000 # default epoch 
-epoch = 2000000 # cfg: fastMigration
-epoch = 3000000 # cfg: slowMigration
-epoch = 4000000 # cfg: superSlowMigration
+epoch = 8000000 # cfg:fastMigration
+epoch = 6000000 # cfg:fast+Migraiton 
+epoch = 4000000 # cfg:fast++Migration 
+epoch = 2000000 # cfg:fast+++Migration 
 
 [scheduler/open/migration/fixedPairSwap]
 threads = 4
@@ -368,9 +369,9 @@ max_frequency = 4.0
 #max_frequency = 1.5  # cfg:1.5GHz
 #max_frequency = 2.0  # cfg:2.0GHz
 #max_frequency = 2.5  # cfg:2.5GHz
-max_frequency = 3.0  # cfg:3.0GHz
-max_frequency = 3.5  # cfg:3.5GHz
-#max_frequency = 4.0  # cfg:4.0GHz
+#max_frequency = 3.0  # cfg:3.0GHz
+#max_frequency = 3.5  # cfg:3.5GHz
+max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
 dvfs_epoch = 1000000 # cfg:slowDVFS
