--- a/config/base.cfg
+++ b/config/base.cfg
@@ -362,6 +362,7 @@ threads = 4
 [scheduler/open/dvfs]
 logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
 logic = maxFreq  # cfg:maxFreq
+logic = edgeCoolingMode # cfg:edgeCoolingMode
 #logic = testStaticPower  # cfg:testStaticPower
 min_frequency = 1.0
 max_frequency = 4.0
@@ -469,3 +470,6 @@ dtm_recovered_temperature = 75
 #freqCore1 = 3 # cfg:powerSaveMaster
 #freqCore2 = 3 # cfg:powerSaveMaster
 #freqCore3 = 3 # cfg:powerSaveMaster
+
+[scheduler/open/dvfs/edgeCoolingMode]
+up_threshold = 80 # cfg:edgeCoolingMode
