--- a/config/base.cfg
+++ b/config/base.cfg
@@ -349,11 +349,11 @@ hb_enabled = false # default value, overridden by line below when 'base_configur
 
 [scheduler/open/migration]
 logic = off  # set the migration algorithm used. Possible algorithms: off (no migration)
-logic = fixedPairSwap # cfg:fixedPairSwap
+#logic = fixedPairSwap # cfg:fixedPairSwap
 epoch = 1000000 # default epoch 
 #epoch = 8000000 # cfg:basicMigration
 #epoch = 6000000 # cfg:enhancedMigration
-epoch = 4000000 # cfg:premiumMigration
+#epoch = 4000000 # cfg:premiumMigration
 #epoch = 2000000 # cfg:ultimateMigration
 
 [scheduler/open/migration/fixedPairSwap]
@@ -361,7 +361,7 @@ threads = 4
 
 [scheduler/open/dvfs]
 logic = off  # set the DVFS algorithm used. Possible algorithms: off (no DVFS), maxFreq, fixedPower, testStaticPower.
-logic = maxFreq  # cfg:maxFreq
+#logic = maxFreq  # cfg:maxFreq
 logic = edgeCoolingMode # cfg:edgeCoolingMode
 #logic = testStaticPower  # cfg:testStaticPower
 min_frequency = 1.0
@@ -375,9 +375,9 @@ max_frequency = 3.0  # cfg:3.0GHz
 #max_frequency = 4.0  # cfg:4.0GHz
 frequency_step_size = 0.1
 dvfs_epoch = 1000000
-dvfs_epoch = 1000000 # cfg:slowDVFS
+#dvfs_epoch = 1000000 # cfg:slowDVFS
 #dvfs_epoch = 250000  # cfg:mediumDVFS
-#dvfs_epoch = 100000  # cfg:fastDVFS
+dvfs_epoch = 100000  # cfg:fastDVFS
 reserved_cores_are_active = false
 #logic = ondemand # cfg:ondemand
 #logic = fixedFreq # cfg:fixedFreq
